# tracelr

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  cargo-appimage.desktop
assets/: tracelr.desktop  tracelr.icns
configs/: prompts.example.yaml
resources/: tracelr.desktop
src/: about.rs  annotation.rs  app.rs  build_info.rs  cache.rs  dataset.rs  grid.rs  main.rs  playback.rs  theme.rs  trajectory.rs  trajectory_view.rs  video.rs
src/gpu_decode/: av1_obu.rs  mod.rs  test_av1.rs  vulkan_decoder.rs  wgpu_device.rs
src/ui/: input.rs  panels.rs
tests/fixtures/: so101_ground_truth_poses.json
